Fix links page ad alignment

--- a/components/Links/Links.module.scss
+++ b/components/Links/Links.module.scss
@@ -12,7 +12,6 @@
 .rightAd {
     text-align: left;
     > * {
-        display:  inline-block;
         &:first-child {margin-bottom: 232px;}
         width: 160px;
     }
